2007-06-04  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (SelectionType.RADIO_BOX): Renamed to
	`RADIO'.

	* pytis/form/inputfield.py: Use new `SelectionType' constants.
	(ListBoxField): Respect `height' specification.  Make the selected
	value visible.

	* pytis/web/form.py: Minor optimization.  Fixed `EditForm'
	constructor bug.

	* pytis/presentation/field.py: Pass the runtime filter condition
	only to `DataEnumerator' methods.  Pre-compute recursive computer
	dependencies in the constructor.

	* pytis/data/types_.py: Removed forgotten unused method `make_me_safe()'.

2007-06-04  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/_test.py (DBDataDefault.test_select_and_aggregate):
	New test.

	* pytis/data/postgresql.py
	(PostgreSQLConnector._make_transaction): New method.

	* pytis/data/data.py (Data.select_and_aggregate): New method.

2007-06-04  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/postgresql.py
	(PostgreSQLStandardBindingHandler._pg_select_aggregate): Use
	database column name in the SQL command, not logical column name.

2007-06-01  Milan Zamazal  <pdm@brailcom.org>

	* pytis/util/util.py (Popen.__init__): Ignore error on closing
	file descriptors in the parent.

2007-05-31  Tomas Cerha  <cerha@brailcom.org>

	* pytis/data/types_.py: Removed all garbage related to the old
	runtime filter implementation.

	* pytis/form/commands_.py: CSV import added to the commands menu.

	* pytis/form/form.py: CSV import fixed.

	* pytis/presentation/field.py: Codebook runtime filter handling
	reimplemented.

	* pytis/form/inputfield.py: Likewise.

2007-05-30  Tomas Cerha  <cerha@brailcom.org>

	* pytis/data/data.py: Use XOR for hash composition to Aviod int exceeding.

	* pytis/data/types_.py: Use XOR for hash composition to Aviod int exceeding.
	Allow passing runtime filter conditian to validation.

2007-05-30  Milan Zamazal  <pdm@brailcom.org>

	* pytis/data/types_.py: Make some classes hashable.

	* pytis/data/data.py: Likewise.
