@@ -1,3 +1,12 @@
+2007-06-05  Milan Zamazal  <pdm@brailcom.org>
+
+	* pytis/data/data.py (Data.select_and_aggregate): Aggregate
+	results clarified.
+
+	* pytis/data/postgresql.py (DBDataPostgreSQL.select_and_aggregate):
+	Use its own implementation retrieving all columns at once.  Be
+	more careful about column types.
+
 2007-06-04  Tomas Cerha  <cerha@brailcom.org>
 
 	* pytis/presentation/spec.py (SelectionType.RADIO_BOX): Renamed to
